--- a/Compilador/index.html
+++ b/Compilador/index.html
@@ -31,22 +31,28 @@
   <body>
     <div>
       <h1>EZcode</h1>
+      <h2 id="nombre">Titulo</h2>
+      <pre id="descripcion">Descripcion</pre>
+
       <!--
       <select id="myselect" onchange="onSelectChange(this.value.trim())">
         <option value="53" >C++</option>
         <option value="62" >Java</option>
         <option value="70">Python</option>
       </select>-->
+
       <div id="editorContainer">
         <div class="container" style="margin-top: 30px">
           <div class="row">
             <div class="col">
-              <pre id="editor">
-      </pre
-              >
+              <h3>Codigo</h3>
+              <pre id="editor"></pre>
             </div>
             <div class="col">
+              <h3>Inputs</h3>
+              <pre id="editor2" style= "height: 150px; width: 200px"></pre>
               <button class="btn btn-success">Execute</button>
+              <button2 class="btn btn-success">Test</button2>
               <br />
               <pre id="ans"></pre>
             </div>
@@ -62,14 +68,16 @@
       function onSelectChange(selectedVal){
        
     console.log(selectedVal)
-        if(selectedVal != undefined && selectedVal!=null && selectedVal!=""){
-         $("button").off('click');
-          codeEditor(selectedVal)
-        }
+      if(selectedVal != undefined && selectedVal!=null && selectedVal!=""){
+        $("button").off('click');
+        codeEditor("92")
       }
-      window.onload = function () {
-          codeEditor("70");
-      };
+    }
+
+
+    window.onload = function () {
+        codeEditor("92");
+    };
     </script>
   </body>
 </html>
