--- a/Compilador/index.html
+++ b/Compilador/index.html
@@ -31,15 +31,11 @@
   <body>
     <div>
       <h1>EZcode</h1>
+      <select id="myselect" onchange="onSelectChange(this.value.trim())"></select>
       <h2 id="nombre">Titulo</h2>
       <pre id="descripcion">Descripcion</pre>
 
-      <!--
-      <select id="myselect" onchange="onSelectChange(this.value.trim())">
-        <option value="53" >C++</option>
-        <option value="62" >Java</option>
-        <option value="70">Python</option>
-      </select>-->
+      
 
       <div id="editorContainer">
         <div class="container" style="margin-top: 30px">
@@ -65,12 +61,10 @@
     <script>
         // document.onload()
 
-      function onSelectChange(selectedVal){
-       
-    console.log(selectedVal)
+    function onSelectChange(selectedVal){
+      console.log(selectedVal);
       if(selectedVal != undefined && selectedVal!=null && selectedVal!=""){
-        $("button").off('click');
-        codeEditor("92")
+        changeId(selectedVal);
       }
     }
 
