--- a/Compilador/index.html
+++ b/Compilador/index.html
@@ -50,12 +50,16 @@
               <button class="btn btn-success">Execute</button>
               <button2 class="btn btn-success">Test</button2>
               <br />
-              <pre id="ans"></pre>
+              <h3>Output</h3>
+              <div class="scroll-box">
+                <pre id="ans"></pre>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <!--<script type="module" src="src/mode-python.js"></script>-->
     <script type="text/javascript" src="assets/js/main.js"></script>
     <script src="texteditor.js"></script>
     <script>
