Warning y codigo vacio

--- a/Compilador/index.html
+++ b/Compilador/index.html
@@ -47,6 +47,8 @@
             <div class="col">
               <h3>Inputs</h3>
               <pre id="editor2" style= "height: 150px; width: 200px"></pre>
+              <div id="warning">
+              </div>
               <button class="btn btn-success">Execute</button>
               <button2 class="btn btn-success">Test</button2>
               <br />
